--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,15 @@ nav{
     justify-content: space-between;
     padding: 12px;
     align-items: center;
+    background-color: #6B7A8F;
 }
 
-.logo-icon{
-    
-    background-image: url(https://picsum.photos/200);
-    height: 25px;
+.logo-icon {
+    background-image: url("../assets/logo.png");
+    height: 50px;
     width: 50px;
     background-size: cover;
-}
+  }
 
 .nav-container{
     display: flex;
@@ -21,9 +21,10 @@ nav{
 }
 
 .nav-item{
-    
+    color: white;
     padding: 8px;
 }
+
 
 .main-title{
     text-align: center;
@@ -31,10 +32,11 @@ nav{
 
 .main-content{
     display: flex;
+    
 }
 
 .main-content-item {
-    
+    padding: 30px;
     width: 100%;
     height: 250px;
     display: flex;
@@ -53,35 +55,82 @@ nav{
     
     width: 100%;
     height: 150px;
-    background-image: url(https://picsum.photos/150);
+    background-image: url("../assets/amerika.jpg");
 }
 
 
 .banner-1 {
-    background-image: url(https://picsum.photos/150);
+    background-image: url("../assets/amerika.jpg");
 }
 
 .banner-2 {
-    background-image: url(https://picsum.photos/150);
+    background-image: url("../assets/paris.jpg");
 }
 
 .banner-3 {
-    background-image: url(https://picsum.photos/150);
+    background-image: url("../assets/uea.jpg");
+}
+
+.banner-4 {
+    background-image: url("../assets/jepang.jpg");
+}
+
+.banner-5 {
+    background-image: url("../assets/ko.jpg");
 }
 
 
-.item-icon{
-    height: 25px;
-    width: 25px;
+
+.caption {
+    margin-right: 20px;
+    margin-left: 20px;
     
-    background-image: url(https://picsum.photos/25);
+  }
+  
+  
+.item-icon{
+    height: 50px;
+    width: 50px;
+    background-image: url("../assets/foto.jpg");
     border-radius: 50%;
+    background-size: cover;
+    margin-bottom: 5px;
+    margin-right: 15px;
 }
+
+.item-icon1,
+.item-icon2,
+.item-icon3 {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-size: cover;
+  margin-right: 9px;
+}
+
+.item-icon1 {
+    background-image: url("../assets/no1.png");
+  }
+  .item-icon2 {
+    background-image: url("../assets/no2.png");
+  }
+  .item-icon3 {
+    background-image: url("../assets/no3.png");
+  }
+  
+
+
 .main-item{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+.contact{
+    text-align: center;
+}
+    
+
 
 input {
     width: 75%;
@@ -94,9 +143,26 @@ input {
     font-family: monospace;
 }
 
+label {
+    text-align: left;
+    width: 75%;
+    font-size: 15px;
+  }
+
+  select {
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: monospace;
+  }
+
 button{
     width: 75%;
-    height: 30px;
+    height: 50px;
     background-color: lightblue;
     border: 0;
 }
@@ -104,6 +170,6 @@ button{
 @media only screen and (max-width: 500px){
     .main-content{
         flex-direction: column;
+
     }
 }
-
